fix overflow problem

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@
   z-index: 100;
   display:grid;
   grid-template-columns: 1fr 3fr;
+  overflow: hidden;
 
 }
 /* SideBar Component */
@@ -78,6 +79,8 @@
 .JokeList {
  
   height:80vh;
+  overflow-y: scroll;
+
 
 }
 
@@ -88,10 +91,11 @@
 }
 .Joke-img {
   display:inline-block;
-  width:50px;
-  height:50px;
+  width:69px;
+  height:69px;
   object-fit: contain;
-  margin-bottom:10px;
+  margin-top:-15px;
+  padding:0.5rem;
 }
 .Joke-rate {
   display: flex;
@@ -103,11 +107,12 @@
 .Joke .up-arrow,
 .Joke .down-arrow {
   font-size: 1.2rem;
-  margin:0 0.1rem;
+  margin:0 0.3rem;
   background: none;
   border: none;
   cursor: pointer;
   color: #fff;
+  margin-top:-10px;
 }
 
 .Joke .rate-number {
@@ -122,8 +127,15 @@
 
 
 .Joke-text {
-    display:inline-block;
+    display:inline;
     color:#fff;
     font-weight: bold;
     font-size:1rem;
+
+    justify-self: flex-start;
+}
+.Joke-buttons {
+  display:flex;
+
+
 }
